front page fix on mobile

--- a/styles/frontpage.css
+++ b/styles/frontpage.css
@@ -136,3 +136,13 @@
     padding: 1rem 1.5rem 5.5rem 1.5rem;
   }
 }
+
+@media only screen and (max-width: 720px) {
+  .about-left-nested {
+    width: 100%;
+  }
+
+  .slide-in-left1 {
+    font-size: 1.5em;
+  }
+}
